# ASGEground

./: .clang-format  CMakeLists.txt  README.md
cmake/functions/: configure_target.cmake  set_target_build_flags.cmake
cmake/libs/: asge.cmake  enetpp.cmake  hashlib.cmake  magic_enum.cmake  rapidyaml.cmake  soloud.cmake
cmake/tools/: gamedata.cmake
data/: README.md
data/backgrounds/: credits.txt
src/: CMakeLists.txt
src/game/: game.cpp  game.h  main.cpp
src/game/GameObjects/: GameObject.h
src/game/GameObjects/Core/: AnimatedSprite.cpp  AnimatedSprite.h  Sound.cpp  Sound.h  SpriteObject.cpp  SpriteObject.h  TextObject.cpp  TextObject.h
src/game/GameObjects/Player/: Player.cpp  Player.h
src/game/GameObjects/Scenes/: LevelTest.cpp  LevelTest.h  Scene.cpp  Scene.h
src/game/GameObjects/Sprites/: AnimatedSprite.cpp  AnimatedSprite.h  ScalableSprite.cpp  ScalableSprite.h  SpriteObject.cpp  SpriteObject.h
src/game/GameObjects/Tilemap/: Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  Tileset.cpp  Tileset.h
